--- a/src/vs/workbench/electron-browser/media/workbench.css
+++ b/src/vs/workbench/electron-browser/media/workbench.css
@@ -52,6 +52,15 @@
 
 .vs .monaco-workbench .sidebar { background: #f3f3f3; }
 
+.vs .monaco-workbench .sidebar:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	width: 1px;
+	height: 100%; /* TODO: Fix to +4px? */
+	background: #ddd;
+}
+
 .vs .monaco-workbench .sidebar .separator { background-color: #EFEFF2; }
 
 .vs .monaco-workbench input {
