--- a/src/vs/workbench/browser/parts/editor/media/titlecontrol.css
+++ b/src/vs/workbench/browser/parts/editor/media/titlecontrol.css
@@ -50,7 +50,6 @@
 
 .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label,
 .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label {
-	display: block;
 	height: 39px;
 	line-height: 39px;
 	min-width: 28px;
@@ -59,22 +58,26 @@
 	background-repeat: no-repeat;
 }
 
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label {
-	display: none !important;
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label .label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label .label {
+	display: none;
 }
 
-.monaco-workbench:not(.nosidebar) > .part.editor > .content > .one-editor-silo.editor-one > .container> .title .title-actions .action-label.toolbar-toggle-more {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label {
+	display: none;
+}
+
+.monaco-workbench.nosidebar .action-label.toolbar-toggle-more {
+	display: none;
+}
+
+.monaco-workbench:not(.nosidebar) .action-label.toolbar-toggle-more {
 	display: block !important;
 }
 
 .hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label,
 .hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label {
 	line-height: initial;
-}
-
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label .label,
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label .label {
-	display: none;
 }
 
 /* Drag Cursor */
