--- a/src/vs/editor/browser/viewParts/scrollDecoration/scrollDecoration.css
+++ b/src/vs/editor/browser/viewParts/scrollDecoration/scrollDecoration.css
@@ -11,6 +11,10 @@
 	box-shadow: #DDD 0 6px 6px -6px inset;
 }
 
+.monaco-editor.vs .scroll-decoration {
+	display: none;
+}
+
 .monaco-editor.vs-dark .scroll-decoration {
 	box-shadow: #000 0 6px 6px -6px inset;
 }
