--- a/src/vs/workbench/browser/parts/panel/media/panelpart.css
+++ b/src/vs/workbench/browser/parts/panel/media/panelpart.css
@@ -18,6 +18,10 @@
 	height: 39px;
 }
 
+.vs .monaco-workbench > .part.panel .title {
+	border-top-color: rgba(0,0,0,0.045);
+}
+
 .hc-black .monaco-workbench > .part.panel .title {
 	border-top-color: #6FC3DF;
 }
