--- a/src/vs/workbench/browser/parts/editor/media/sidebysideEditor.css
+++ b/src/vs/workbench/browser/parts/editor/media/sidebysideEditor.css
@@ -7,6 +7,6 @@
 	box-shadow: -6px 0 5px -5px black;
 }
 
-.side-by-side-editor > .master-editor-container {
+/*.side-by-side-editor > .master-editor-container {
 	box-shadow: -6px 0 5px -5px #DDD;
-}
+}*/
