--- a/src/vs/workbench/parts/preferences/browser/media/preferences.css
+++ b/src/vs/workbench/parts/preferences/browser/media/preferences.css
@@ -161,9 +161,9 @@
 	box-shadow: -6px 0 5px -5px black;
 }
 
-.preferences-editor .side-by-side-preferences-editor > .editable-preferences-editor-container {
+/*.preferences-editor .side-by-side-preferences-editor > .editable-preferences-editor-container {
 	box-shadow: -6px 0 5px -5px #DDD;
-}
+}*/
 
 .monaco-editor .settings-group-title-widget {
 	z-index: 1;
